indext.html modified

--- a/index.html
+++ b/index.html
@@ -163,36 +163,33 @@ dragula([document.getElementById(left), document.getElementById(right)], {
 <div class='parent'>
     <label for='hy'>Move stuff within and between these two containers. Note how it scrolls while dragging.</label>
     <div class='wrapper'>
-      <div id='left6' class='container' style='overflow-y:auto; height:400px;display:block;'>
+      <div id='left6' class='container' style='overflow-y:auto; height:400px; width:350px;display:block;'>
         <div>You can move these elements between these two containers</div>
         <div>Moving them anywhere else isn't quite possible</div>
         <div>There's also the possibility of moving elements around in the same container, changing their position</div>
+        <div>You can drag these elements to edge of the container, container scrolls automatically</div>
+        <div>Drag the element to edge to of window viewpoint, window scrolls automatically </div>
+        <div>When you drag the element out of its container, scrolling doesn't work</div>
         <div>You can move these elements between these two containers</div>
         <div>Moving them anywhere else isn't quite possible</div>
         <div>There's also the possibility of moving elements around in the same container, changing their position</div>
-        <div>You can move these elements between these two containers</div>
-        <div>Moving them anywhere else isn't quite possible</div>
-        <div>There's also the possibility of moving elements around in the same container, changing their position</div>
+        <div>You can drag these elements to edge of the container, container scrolls automatically</div>
+        <div>Drag the element to edge to of window viewpoint, window scrolls automatically </div>
+        <div>When you drag the element out of its container, scrolling doesn't work</div>
       </div>
       <div id='right6' class='container'>
         <div>You can move these elements between these two containers</div>
         <div>Moving them anywhere else isn't quite possible</div>
         <div>There's also the possibility of moving elements around in the same container, changing their position</div>
+        <div>You can drag these elements to edge of the container, container scrolls automatically</div>
+        <div>Drag the element to edge to of window viewpoint, window scrolls automatically </div>
+        <div>When you drag the element out of its container, scrolling doesn't work</div>
         <div>You can move these elements between these two containers</div>
         <div>Moving them anywhere else isn't quite possible</div>
         <div>There's also the possibility of moving elements around in the same container, changing their position</div>
-        <div>You can move these elements between these two containers</div>
-        <div>Moving them anywhere else isn't quite possible</div>
-        <div>There's also the possibility of moving elements around in the same container, changing their position</div>
-        <div>You can move these elements between these two containers</div>
-        <div>Moving them anywhere else isn't quite possible</div>
-        <div>There's also the possibility of moving elements around in the same container, changing their position</div>
-        <div>You can move these elements between these two containers</div>
-        <div>Moving them anywhere else isn't quite possible</div>
-        <div>There's also the possibility of moving elements around in the same container, changing their position</div>
-        <div>You can move these elements between these two containers</div>
-        <div>Moving them anywhere else isn't quite possible</div>
-        <div>There's also the possibility of moving elements around in the same container, changing their position</div>
+        <div>You can drag these elements to edge of the container, container scrolls automatically</div>
+        <div>Drag the element to edge to of window viewpoint, window scrolls automatically </div>
+        <div>When you drag the element out of its container, scrolling doesn't work</div>
       </div>
     </div>
     <pre>
